# advent_of_code

./: Cargo.toml  README.md
days/day_01/: Cargo.toml
days/day_01/data/: depths.csv  test_depths.csv
days/day_01/src/: lib.rs
days/day_02/: Cargo.toml
days/day_02/data/: maneuvers.csv
days/day_02/src/: lib.rs
days/day_03/: Cargo.toml
days/day_03/data/: diagnostics.csv  test_diagnostics.csv
days/day_03/src/: lib.rs
days/day_04/: Cargo.toml
days/day_04/src/: lib.rs
days/day_05/: Cargo.toml
days/day_05/src/: lib.rs
days/day_06/: Cargo.toml
days/day_06/src/: lib.rs
days/day_07/src/: lib.rs
days/day_08/src/: lib.rs
taskrunner/: Cargo.toml
taskrunner/src/: main.rs
tasks/task_01/: Cargo.toml
tasks/task_01/src/: lib.rs
tasks/task_02/: Cargo.toml
tasks/task_02/src/: lib.rs
